2007-05-27  Kouhei Sutou  <kou@cozmixng.org>

	* samples/agg/aa_test.rb: ported from AGG's example.

        * README: added some links for documentation.

	* src/rb_cairo.c: 1.5.0 -> 1.5.1.

	* Rakefile: improved current release NEWS extraction.

	* NEWS: updated.

	* Rakefile: supported document update.

	* src/depend (install-so): used install-so instead of install.

	* src/rb_cairo_font_options.c (Cairo::FontOptions#merge): renamed
	to merge! because the method is destructive.

	* src/lib/cairo.rb (Cairo::FontOptions#merge): added
	non-destructive version.

2007-05-23  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/cairo.rb (Cairo.normalize_const_name): treated "." as
	ignore character.

	* src/rb_cairo.c (Cairo::BINDINGS_VERSION): 1.6.0 -> 1.5.0.

2007-05-22  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_pattern.c (cr_radial_pattern_get_radial_circles):
	returned [[x0, y0, r0], [x1, y1, r1]] instead of [x0, y0, r0, x1,
	y1, r1].

	* src/rb_cairo_path.c: used super.

	* src/rb_cairo_path.c (Cairo::PathMoveTo, Cairo::PathLineTo,
	Cairo::PathCurveTo, Cairo::PathClosePath): defined each path data
	type as class.

2007-05-21  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_matrix.c (Cairo::Matrix#transform_distance): fixed
	a typo.

	* src/rb_cairo_matrix.c: added accessors.

	* src/rb_cairo_surface.c: supported 64bit platform. Thanks to
	Yoshinao Muramatsu!

2007-05-20  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_surface.c (cr_win32_surface_initialize): fixed a
	typo. Thanks to Yoshinao Muramatsu!

	* src/rb_cairo_font_face.c, src/lib/cairo/constants.rb: followed
	up the previous commit.

	* src/cairo.def, src/rb_cairo_pattern.c, src/rb_cairo_surface.c,
	src/rb_cairo_font_face.c: removed needless methods XXX#type.

	* src/rb_cairo.h, src/rb_cairo_pattern.c, src/rb_cairo_surface.c:
	always detected surface and pattern type dynamically.
	* src/rb_cairo_context.c: followed the above changes.

	* src/rb_cairo.h, src/rb_cairo_surface.c: improved win32 surface